force-app/main/default/objects/FORECAST__c/FORECAST__c.object-meta.xml
<CustomObject>
    <label>FORECAST</label>
    <nameField>
        <label>FORECAST Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FORECAST</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>