force-app/main/default/objects/FORECAST__c/fields/BOCode__c.field-meta.xml
<CustomField>
    <fullName>BOCode__c</fullName>
    <label>BOCode</label>
    <length>14</length>
    <required>true</required>
    <type>Text</type>
</CustomField>