force-app/main/default/objects/FORECAST__c/fields/BOName__c.field-meta.xml
<CustomField>
    <fullName>BOName__c</fullName>
    <label>BOName</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>