force-app/main/default/objects/FORECAST__c/fields/Companycode__c.field-meta.xml
<CustomField>
    <fullName>Companycode__c</fullName>
    <label>Companycode</label>
    <length>14</length>
    <required>true</required>
    <type>Text</type>
</CustomField>