force-app/main/default/objects/FORECAST__c/fields/contract__c.field-meta.xml
<CustomField>
    <fullName>contract__c</fullName>
    <label>contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>