force-app/main/default/objects/FORECAST__c/fields/Curr__c.field-meta.xml
<CustomField>
    <fullName>Curr__c</fullName>
    <label>Curr</label>
    <length>10</length>
    <type>Text</type>
</CustomField>