force-app/main/default/objects/FORECAST__c/fields/forecast_version__c.field-meta.xml
<CustomField>
    <fullName>forecast_version__c</fullName>
    <label>forecast_version</label>
    <length>14</length>
    <required>true</required>
    <type>Text</type>
</CustomField>