force-app/main/default/objects/FORECAST__c/fields/sales__c.field-meta.xml
<CustomField>
    <fullName>sales__c</fullName>
    <label>sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>