force-app/main/default/objects/FORECAST__c/fields/YYYY_MM__c.field-meta.xml
<CustomField>
    <fullName>YYYY_MM__c</fullName>
    <label>YYYY_MM</label>
    <length>14</length>
    <required>true</required>
    <type>Text</type>
</CustomField>